[package]
name = "ckb-sdk-transfer-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
secp256k1 = { version = "0.20", features = ["recovery"] }
serde_json = "1.0"
ckb-sdk = "2.2.0"
ckb-types = "=0.104.0"
ckb-jsonrpc-types = "=0.104.0"
ckb-hash = "=0.104.0"
ckb-crypto = { version = "=0.104.0", features = ["secp"] }
rand = "0.8.5"
